# WATT-Simulate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  convertLeanstoreRunStatsTowOpt.py  convertShoreRunStatsTowOpt.py  evalAccessTable.py  evalLeanstoreRun.py  fullRun.py  generate_traces.py  make_graphs.py  normalizeLeanstoreRun.py  normalizeShoreRun.py  old_to_new_format.py  static_pages.py  wOpt.py
.github/workflows/: cmake-single-platform.yml
ALL_1Mille/: Datareads.csv  Datawrites.csv
ALL_TPCC/: Datareads.csv  Datawrites.csv
ALL_TPCC/secondrun/: Datareads.csv  Datawrites.csv
Boost_Test/: CMakeLists.txt  algoTest.cpp
algos/: ARC.hpp  CLOCK.hpp  EvictStrategy.hpp  Generators.cpp  Generators.hpp  LLRU_SH.hpp  LRFU.cpp  LRFU.hpp  WATT.cpp  WATT.hpp  cf_lru.hpp  general.hpp  hyperbolic.hpp  lean_evict.hpp  lfu_k.cpp  lfu_k.hpp  lru.hpp  lruStackDist.cpp  lruStackDist.hpp  lru_k.hpp  lru_wsr.hpp  opt.hpp  random.hpp  sieve.hpp  staticOpt.cpp  staticOpt.hpp
c/: CMakeLists.txt
c/Boost_Test/: CMakeLists.txt  algoTest.cpp
c/algos/: EvictStrategy.hpp  Generators.cpp  Generators.hpp  cf_lru.hpp  general.hpp  lean_evict.hpp  lfu_k.cpp  lfu_k.hpp  lru.hpp  lruStackDist.cpp  lruStackDist.hpp  lru_k.hpp  lru_wsr.hpp  opt.hpp  random.hpp  staticOpt.cpp  staticOpt.hpp
c/evalAccessTable/: evalAccessTable.cpp  evalAccessTable.hpp  general.hpp  lruStackDist.cpp  lruStackDist.hpp  main.cpp
evalAccessTable/: evalAccessTable.cpp  evalAccessTable.hpp  main.cpp
optW/: generateOpt.py  solveOpt.py
